--- a/src/views/loginRegister.html
+++ b/src/views/loginRegister.html
@@ -20,12 +20,12 @@
       <h1>Login</h1>
       <form action="#" id="loginForm">
         <div>
-          <label for="loginEmail">Email</label>
-          <input type="email" id="loginEmail" placeholder="Enter your email" required>
+          <label for="email">Email</label>
+          <input type="email" id="email" placeholder="Enter your email" required>
         </div>
         <div>
-          <label for="loginPassword">Password</label>
-          <input type="password" id="loginPassword" placeholder="Enter your password" required>
+          <label for="password">Password</label>
+          <input type="password" id="password" placeholder="Enter your password" required>
         </div>
         <a href="#">Forgot password?</a>
         <input type="submit" class="button" value="Login" id="login">
