--- a/src/views/loginRegister/loginRegister.html
+++ b/src/views/loginRegister/loginRegister.html
@@ -44,16 +44,16 @@
       <h1>Signup</h1>
       <form id="registrationForm">
         <div>
-          <label for="signupPassword">NAME</label>
+          <label for="name">NAME</label>
           <input type="text" id="name" placeholder="Enter Your Full Name" required>
         </div>
         <div>
-          <label for="signupEmail">Email</label>
-          <input type="email" id="email" placeholder="Enter your email" required>
+          <label for="userEmail">Email</label>
+          <input type="email" id="userEmail" placeholder="Enter your email" required>
         </div>
         <div>
-          <label for="confirmPassword">Password</label>
-          <input type="password" id="password" placeholder="Enter your password" required>
+          <label for="userPassword">Password</label>
+          <input type="password" id="userPassword" placeholder="Enter your password" required>
         </div>
         <input type="submit" class="button" value="Signup" id="signup">
       </form>
