--- a/src/views/homePage/homePage.html
+++ b/src/views/homePage/homePage.html
@@ -5,13 +5,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Home Page</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
     <link rel="stylesheet" href="./homePage.css" />
 </head>
 
 <body>
     <!------------------------------------------------- Nav Bar starts ------------------------------------------------->
-    <nav class="navbar navbar-expand-lg navbar-dark" id="navigation" style="background-color:#009579;  margin-bottom: 30px;">
+    <nav class="navbar navbar-expand-lg navbar-dark" id="navigation"
+        style="background-color:#009579;  margin-bottom: 30px;">
         <div class="container-fluid">
             <img src="./budget.png" width="30px" height="30px" id="png" />
             <a class="navbar-brand" href="#" style="margin-left: 10px;">Expense Tracker</a>
@@ -48,9 +50,9 @@
         </div>
     </nav>
     <!------------------------------------------------- Nav Bar Ends ------------------------------------------------->
-    
+
     <!------------------------------------------------- form starts ------------------------------------------------->
-    <div class="container d-flex justify-content-center" >
+    <div class="container d-flex justify-content-center">
         <form class="form-inline" id="myForm">
             <div class="form-content">
                 <div class="input-group mb-3">
@@ -89,46 +91,56 @@
     <div class="container mt-4 p-3" id="table">
         <div class="table-responsive">
             <table id="example" class="table table-hover" style="width:100%">
-            <!-- table head -->
-            <thead id="tableHead">
-                <tr>
-                    <th scope="col" class="rounded-start">Date</th>
-                    <th scope="col">Category</th>
-                    <th scope="col">Description</th>
-                    <th scope="col">Amount</th>
-                    <th scope="col" class="rounded-end"></th>
-                </tr>
-            </thead>
-            <!-- table head -->
+                <!-- table head -->
+                <thead id="tableHead">
+                    <tr>
+                        <th scope="col" class="rounded-start">Date</th>
+                        <th scope="col">Category</th>
+                        <th scope="col">Description</th>
+                        <th scope="col">Amount</th>
+                        <th scope="col" class="rounded-end"></th>
+                    </tr>
+                </thead>
+                <!-- table head -->
 
-            <!-- table body starts -->
-            <tbody id="tbodyId">
-            <!-- <tr class="trStyle">
-            <th scope="row">1</th>
-            <td>abc</td>
-            <td>def</td>
-            <td>ghi</td>
-            <td>
-              <button class="editDelete btn btn-danger">Delete</button>
-              <button class="editDelete btn btn-secondary">Edit</button>
-            </td>
-          </tr> -->
-            </tbody>
-        <!-- table body ends -->
-        </table>
+                <!-- table body starts -->
+                <tbody id="tbodyId">
+                    <!-- <tr class="trStyle">
+                           <th scope="row">1</th>
+                           <td>abc</td>
+                           <td>def</td>
+                           <td>ghi</td>
+                           <td>
+                             <button class="editDelete btn btn-danger">Delete</button>
+                             <button class="editDelete btn btn-secondary">Edit</button>
+                           </td>
+                         </tr> -->
+                </tbody>
+                <!-- table body ends -->
+            </table>
+        </div>
     </div>
-<!------------------------------------------------- table ends ------------------------------------------------->
+    <!------------------------------------------------- table ends ------------------------------------------------->
 
-<!------------------------------------------------- script starts ------------------------------------------------->
+    <footer class="bottom text-center p-3">
+        <div>
+            &#169 Sachin Dimri &#169
+        </div>
+        <div>
+            Contact : <a href="mailto:dimrisachin79@gmail.com">dimrisachin79@gmail.com</a>
+        </div>
+    </footer>
+
+    <!------------------------------------------------- script starts ------------------------------------------------->
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.2/axios.min.js"
         integrity="sha512-QTnb9BQkG4fBYIt9JGvYmxPpd6TBeKp6lsUrtiVQsrJ9sb33Bn9s0wMQO9qVBFbPX3xHRAsBHvXlcsrnJjExjg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="./homePage.js"></script>    
-<!------------------------------------------------- script ends ------------------------------------------------->
-
+    <script src="./homePage.js"></script>
+    <!------------------------------------------------- script ends ------------------------------------------------->
 </body>
 
 </html>
