--- a/src/views/homePage/homePage.html
+++ b/src/views/homePage/homePage.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark" id="navigation"
         style="background-color:#009579;  margin-bottom: 30px;">
         <div class="container-fluid">
-            <img src="./budget.png" width="30px" height="30px" id="png" />
+            <img src="../budget.png" width="30px" height="30px" id="png" />
             <a class="navbar-brand" href="#" style="margin-left: 10px;">Expense Tracker</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -25,14 +25,14 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#" onclick="reloadHomePage()">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a id="reportsLink" class="nav-link active" aria-current="page" href="#">Reports
+                        <a id="reportsLink" class="nav-link active" aria-current="page" href="#" onclick="onClickAlert();">Reports
                             &#128176</a>
                     </li>
                     <li class="nav-item">
-                        <a id="leaderboardLink" class="nav-link active" aria-current="page" href="#">LeaderBoard
+                        <a id="leaderboardLink" class="nav-link active" aria-current="page" href="#" onclick="onClickAlert();">LeaderBoard
                             &#128176</a>
                     </li>
                 </ul>
@@ -140,6 +140,14 @@
         integrity="sha512-QTnb9BQkG4fBYIt9JGvYmxPpd6TBeKp6lsUrtiVQsrJ9sb33Bn9s0wMQO9qVBFbPX3xHRAsBHvXlcsrnJjExjg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./homePage.js"></script>
+    <script>
+        function onClickAlert() {
+          alert("Buy Premium to access this feature.");
+        }
+        function reloadHomePage(){
+            location.reload();
+        }
+      </script>
     <!------------------------------------------------- script ends ------------------------------------------------->
 </body>
 
