Forgot Password(brevo(sendinblue))

--- a/src/views/loginRegister/loginRegister.html
+++ b/src/views/loginRegister/loginRegister.html
@@ -24,7 +24,7 @@
           <label for="password">Password</label>
           <input type="password" id="password" placeholder="Enter your password" required>
         </div>
-        <a href="#">Forgot password?</a>
+        <a href="../forgotPassword/forgotPassword.html">Forgot password?</a>
         <input type="submit" class="button" value="Login" id="login">
       </form>
 
