--- a/src/views/homePage/homePage.html
+++ b/src/views/homePage/homePage.html
@@ -122,6 +122,7 @@
     </div>
     <!------------------------------------------------- table ends ------------------------------------------------->
 
+    <!-- ------------------------------------------- Footer ---------------------------------------------------->
     <footer class="bottom text-center p-3">
         <div>
             &#169 Sachin Dimri &#169
@@ -130,6 +131,8 @@
             Contact : <a href="mailto:dimrisachin79@gmail.com">dimrisachin79@gmail.com</a>
         </div>
     </footer>
+    <!-- ------------------------------------------- Footer Ends---------------------------------------------------->
+
 
     <!------------------------------------------------- script starts ------------------------------------------------->
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
