Report Generation Backend (Premium Feature) (created Blob file)

--- a/src/views/report/report.html
+++ b/src/views/report/report.html
@@ -64,7 +64,7 @@
                         <label for="dailyDate" class="form-label">Select Date</label>
                         <input type="date" class="form-control" id="dailyDate" />
                     </div>
-                    <button id="dailyDateShowBtn" type="submit" class="btn btn-primary showBtn">Click</button>
+                    <button id="dailyDateShowBtn" type="button" class="btn btn-primary showBtn">Click</button>
                 </form>
             </div>
             <div class="col-md-12 mt-3">
@@ -83,11 +83,6 @@
                 </table>
             </div>
         </div>
-        <div class="row mt-3">
-            <div class="col-md-12">
-                <button id="downloadDailyBtn" class="btn btn-primary">Download Daily Expenses</button>
-            </div>
-        </div>
         <br>
         <!-- ----------------------------------Daily Reports Ends-------------------------------------------------->
 
@@ -101,9 +96,9 @@
                 <form>
                     <div class="mb-3">
                         <label for="monthlyDate" class="form-label">Select Date</label>
-                        <input type="date" class="form-control" id="monthlyDate" />
+                        <input type="month" class="form-control" id="monthlyDate" />
                     </div>
-                    <button id="monthlyDateShowBtn" type="submit" class="btn btn-primary showBtn">Click</button>
+                    <button id="monthlyDateShowBtn" type="button" class="btn btn-primary showBtn">Click</button>
                 </form>
             </div>
             <div class="col-md-12 mt-3">
@@ -120,11 +115,6 @@
                         <!-- Monthly table body content will be generated dynamically -->
                     </tbody>
                 </table>
-            </div>
-        </div>
-        <div class="row mt-3">
-            <div class="col-md-12">
-                <button id="downloadMonthlyBtn" class="btn btn-primary">Download Monthly Expenses</button>
             </div>
         </div>
     </div>
