--- a/src/views/homePage/homePage.html
+++ b/src/views/homePage/homePage.html
@@ -61,8 +61,8 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="basic-addon3">Select Category</span>
                     </div>
-                    <select class="form-control" id="category">
-                        <option selected>Choose...</option>
+                    <select class="form-control" id="category" required>
+                        <option selected>Skincare</option>
                         <option value="electronic">Electronic</option>
                         <option value="food">Food</option>
                         <option value="skincare">Skincare</option>
@@ -73,13 +73,13 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="basic-addon3">Description</span>
                     </div>
-                    <input type="text" class="form-control" id="description" aria-describedby="basic-addon3">
+                    <input type="text" class="form-control" id="description" aria-describedby="basic-addon3" required>
                 </div>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="basic-addon3">Amount</span>
                     </div>
-                    <input type="text" class="form-control" id="expenseAmount" aria-describedby="basic-addon3">
+                    <input type="text" class="form-control" id="expenseAmount" aria-describedby="basic-addon3" required>
                 </div>
                 <div class="text-center">
                     <button type="submit" class="btn btn-primary my-1">Add Expense</button>
@@ -121,12 +121,26 @@
                 <!-- table body ends -->
             </table>
         </div>
-        <nav aria-label="Page navigation example">
-            <ul id="paginationUL" class="pagination justify-content-md-end">
-                <!-- <li class="page-item"><a class="page-link" href="#">1</a></li>
-                     <li class="page-item"><a class="page-link" href="#">2</a></li>-->
-            </ul>
-        </nav>
+        <div style="display: flex; justify-content: space-between; align-items: center;">
+            <div style="display: flex; align-items: center;">
+                <label for="pageSizeDropdown" style="margin-right: 5px; font-weight: bold;">Page Size:</label>
+                <select id="pageSizeDropdown" style=" font-size: 15px; border: 1px solid #ccc; border-radius: 8px; height: 30px; font-weight: bold;" onchange="fetchDataAndUpdatePage()">
+                    <option value="5">5</option>
+                    <option value="10">10</option>
+                    <option value="20">15</option>
+                    <option value="20">20</option>
+                    <option value="20">25</option>
+                </select>
+            </div>
+            <nav aria-label="Page navigation example">
+                <ul id="paginationUL" class="pagination justify-content-md-end">
+                    <!-- <li class="page-item"><a class="page-link" href="#">1</a></li>
+                         <li class="page-item"><a class="page-link" href="#">2</a></li>-->
+                </ul>
+            </nav>
+        </div>
+        
+        
     </div>
     <!------------------------------------------------- table ends ------------------------------------------------->
 
@@ -158,8 +172,9 @@
             alert("Buy Premium to access this feature.");
         }
         function reloadHomePage() {
-            location.reload();
+            window.location.reload();
         }
+        
     </script>
     <!------------------------------------------------- script ends ------------------------------------------------->
 </body>
