--- a/src/views/homePage/homePage.html
+++ b/src/views/homePage/homePage.html
@@ -124,7 +124,9 @@
         <div style="display: flex; justify-content: space-between; align-items: center;">
             <div style="display: flex; align-items: center;">
                 <label for="pageSizeDropdown" style="margin-right: 5px; font-weight: bold;">Page Size:</label>
-                <select id="pageSizeDropdown" style=" font-size: 15px; border: 1px solid #ccc; border-radius: 8px; height: 30px; font-weight: bold;" onchange="fetchPageSizeAndUpdatePage()">
+                <select id="pageSizeDropdown"
+                    style=" font-size: 15px; border: 1px solid #ccc; border-radius: 8px; height: 30px; font-weight: bold;"
+                    onchange="fetchPageSizeAndUpdatePage()">
                     <option value="5">5</option>
                     <option value="10">10</option>
                     <option value="20">15</option>
@@ -139,8 +141,8 @@
                 </ul>
             </nav>
         </div>
-        
-        
+
+
     </div>
     <!------------------------------------------------- table ends ------------------------------------------------->
 
@@ -174,7 +176,7 @@
         function reloadHomePage() {
             window.location.reload();
         }
-        
+
     </script>
     <!------------------------------------------------- script ends ------------------------------------------------->
 </body>
